--- a/.env.example
+++ b/.env.example
@@ -23,9 +23,27 @@ APP_PORT=8000
 LLM_TYPE=ollama
 MODEL_NAME=llama3.2:3b
 
-# Vector Store
+# Vector Store Type: chroma, faiss, or qdrant
+VECTOR_STORE_TYPE=qdrant
 VECTOR_STORE_PATH=data/vectorstores
 COLLECTION_NAME=sgk_tin
+
+# ===========================================
+# Qdrant Configuration
+# ===========================================
+
+# Choose deployment mode: local or cloud
+
+# For Local Qdrant (Docker/Self-hosted)
+# QDRANT_HOST=localhost
+# QDRANT_PORT=6333
+# QDRANT_GRPC_PORT=6334
+# QDRANT_PREFER_GRPC=false
+
+# For Qdrant Cloud (Recommended - faster and managed)
+QDRANT_URL=https://fc13446b-1e9b-468c-a9d5-c2437c304a5e.us-west-1-0.aws.cloud.qdrant.io:6333
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.4Ytpyv0aZwZMdpql8Cq1lwQofiBzmxcU-ToJQke9iCw
+QDRANT_PREFER_GRPC=false
 
 # Embedding Model
 EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
