--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ langchain-community>=0.3.18
 langchain-core>=0.3.28
 langchain-text-splitters>=0.3.5
 langchain-openai>=0.3.0
+langchain-qdrant>=0.2.0
 
 # ===========================================
 # Embeddings & ML
@@ -33,6 +34,7 @@ transformers>=4.47.1
 # Vector Stores
 # ===========================================
 chromadb>=0.6.3
+qdrant-client>=1.12.1
 # faiss-cpu>=1.9.0  # Uncomment if needed
 
 # ===========================================
@@ -40,6 +42,8 @@ chromadb>=0.6.3
 # ===========================================
 openai>=1.59.5
 tiktoken>=0.8.0
+google-generativeai>=0.8.3
+langchain-google-genai>=2.0.8
 
 # ===========================================
 # Utilities
