--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,68 @@
 # ===========================================
 # Core
 # ===========================================
-pydantic>=2.10.6
-pydantic-settings>=2.7.1
-python-dotenv>=1.0.1
+pydantic>=2.10.6,<3.0.0
+pydantic-settings>=2.7.1,<3.0.0
+python-dotenv>=1.0.1,<2.0.0
 
 # ===========================================
 # PDF Processing
 # ===========================================
-pdfplumber>=0.11.7
-pdf2image>=1.17.0
-pytesseract>=0.3.13
-opencv-python>=4.10.0
+pdfplumber>=0.11.7,<1.0.0
+pdf2image>=1.17.0,<2.0.0
+pytesseract>=0.3.13,<1.0.0
+opencv-python>=4.10.0,<4.11.0
 
 # ===========================================
-# LangChain Ecosystem (v0.3.x stable)
+# LangChain Ecosystem (v1.0.x stable)
 # ===========================================
-langchain>=0.3.18
-langchain-community>=0.3.18
-langchain-core>=0.3.28
-langchain-text-splitters>=0.3.5
-langchain-openai>=0.3.0
-langchain-qdrant>=0.2.0
+langchain>=1.0.0,<2.0.0
+langchain-community>=1.0.0,<2.0.0
+langchain-core>=1.0.0,<2.0.0
+langchain-text-splitters>=1.0.0,<2.0.0
+langchain-openai>=1.0.0,<2.0.0
+langchain-qdrant>=1.0.0,<2.0.0
 
 # ===========================================
 # Embeddings & ML
 # ===========================================
-sentence-transformers>=3.3.1
-torch>=2.5.1  # Explicit install recommended
-transformers>=4.47.1
+sentence-transformers>=3.3.1,<4.0.0
+torch>=2.5.1,<3.0.0  # Explicit install recommended
+transformers>=4.47.1,<5.0.0
 
 # ===========================================
 # Vector Stores
 # ===========================================
-chromadb>=0.6.3
-qdrant-client>=1.12.1
-# faiss-cpu>=1.9.0  # Uncomment if needed
+chromadb>=0.6.3,<1.0.0
+qdrant-client>=1.12.1,<2.0.0
+# faiss-cpu>=1.9.0,<2.0.0  # Uncomment if needed
 
 # ===========================================
 # LLM Integration
 # ===========================================
-openai>=1.59.5
-tiktoken>=0.8.0
-google-generativeai>=0.8.3
-langchain-google-genai>=2.0.8
+openai>=1.59.5,<2.0.0
+tiktoken>=0.8.0,<1.0.0
+google-generativeai>=0.8.3,<1.0.0
+langchain-google-genai>=2.0.0,<3.0.0
 
 # ===========================================
 # Utilities
 # ===========================================
-tqdm>=4.67.1
-numpy>=2.2.6
-protobuf>=5.26.1
-py-eureka-client>=0.13.2
+tqdm>=4.67.1,<5.0.0
+numpy>=2.0.0,<2.3.0  # Fix: numpy<2.3.0 for opencv compatibility
+protobuf>=5.0.0,<6.0.0  # Fix: protobuf 5.x for compatibility
+py-eureka-client>=0.13.2,<1.0.0
+urllib3>=1.26.0,<2.4.0  # Fix: urllib3<2.4.0 for kubernetes compatibility
+duckduckgo-search>=6.3.8,<7.0.0  # For web search fallback
+
+# ===========================================
+# API Framework
+# ===========================================
+fastapi>=0.115.0,<1.0.0
+uvicorn>=0.34.0,<1.0.0
 
 # ===========================================
 # Testing
 # ===========================================
-pytest>=8.4.2
-pytest-cov>=6.0.0
+pytest>=8.4.2,<9.0.0
+pytest-cov>=6.0.0,<7.0.0
