--- a/.env.example
+++ b/.env.example
@@ -41,8 +41,9 @@ COLLECTION_NAME=sgk_tin
 # QDRANT_PREFER_GRPC=false
 
 # For Qdrant Cloud (Recommended - faster and managed)
-QDRANT_URL=https://fc13446b-1e9b-468c-a9d5-c2437c304a5e.us-west-1-0.aws.cloud.qdrant.io:6333
-QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.4Ytpyv0aZwZMdpql8Cq1lwQofiBzmxcU-ToJQke9iCw
+# Get these from https://cloud.qdrant.io/
+QDRANT_URL=https://your-cluster-id.region.aws.cloud.qdrant.io:6333
+QDRANT_API_KEY=your-qdrant-api-key-here
 QDRANT_PREFER_GRPC=false
 
 # Embedding Model
@@ -52,6 +53,12 @@ EMBEDDING_DEVICE=cuda
 # ===========================================
 # API Configuration
 # ===========================================
+
+# API Key for securing endpoints (optional - but REQUIRED for production)
+# If not set, API key authentication is disabled
+# Generate a secure random key: python -c "import secrets; print(secrets.token_urlsafe(32))"
+# Example: RAG_API_KEY=Kx9mP2vL4nR8sT6wQ3jF7hD5gB1yN0zA_xC4eV8
+RAG_API_KEY=
 
 # CORS Origins (comma-separated)
 CORS_ORIGINS=*
