--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ numpy>=2.0.0,<2.3.0  # Fix: numpy<2.3.0 for opencv compatibility
 protobuf>=5.0.0,<6.0.0  # Fix: protobuf 5.x for compatibility
 py-eureka-client>=0.13.2,<1.0.0
 urllib3>=1.26.0,<2.4.0  # Fix: urllib3<2.4.0 for kubernetes compatibility
-duckduckgo-search>=6.3.8,<7.0.0  # For web search fallback
+ddgs>=6.3.8,<7.0.0  # For web search fallback
 
 # ===========================================
 # API Framework
