--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,14 @@ fastapi>=0.115.0,<1.0.0
 uvicorn>=0.34.0,<1.0.0
 
 # ===========================================
+# Database (PostgreSQL with SQLAlchemy)
+# ===========================================
+sqlalchemy>=2.0.0,<3.0.0
+asyncpg>=0.29.0,<1.0.0
+psycopg2-binary>=2.9.0,<3.0.0
+alembic>=1.13.0,<2.0.0
+
+# ===========================================
 # Testing
 # ===========================================
 pytest>=8.4.2,<9.0.0
