--- a/requirements-cloud.txt
+++ b/requirements-cloud.txt
@@ -1,4 +1,10 @@
 # ===========================================
+# Optimized Requirements for Cloud Deployment
+# For: Gemini API + Qdrant Cloud + Supabase
+# CPU-only (no CUDA)
+# ===========================================
+
+# ===========================================
 # Core
 # ===========================================
 pydantic>=2.10.6,<3.0.0
@@ -6,54 +12,41 @@ pydantic-settings>=2.7.1,<3.0.0
 python-dotenv>=1.0.1,<2.0.0
 
 # ===========================================
-# PDF Processing
-# ===========================================
-pdfplumber>=0.11.7,<1.0.0
-pdf2image>=1.17.0,<2.0.0
-pytesseract>=0.3.13,<1.0.0
-opencv-python>=4.10.0,<4.11.0
-
-# ===========================================
-# LangChain Ecosystem (v0.3.x/v0.4.x stable)
+# LangChain Ecosystem (v0.3.x stable)
 # ===========================================
 langchain>=0.3.0,<0.4.0
 langchain-community>=0.3.0,<0.4.0
 langchain-core>=0.3.0,<0.4.0
 langchain-text-splitters>=0.3.0,<0.4.0
-langchain-openai>=0.2.0,<0.3.0
+langchain-google-genai>=2.0.0,<3.0.0  # For Gemini
 langchain-qdrant>=0.2.0,<0.3.0
 
 # ===========================================
-# Embeddings & ML
+# Embeddings & ML (CPU-only)
 # ===========================================
 sentence-transformers>=3.3.1,<4.0.0
-torch>=2.5.1,<3.0.0  # Explicit install recommended
 transformers>=4.47.1,<5.0.0
+# Note: torch (CPU-only) is installed separately in Dockerfile
 
 # ===========================================
-# Vector Stores
+# Vector Stores (Cloud)
 # ===========================================
-chromadb>=0.6.3,<1.0.0
 qdrant-client>=1.12.1,<2.0.0
-# faiss-cpu>=1.9.0,<2.0.0  # Uncomment if needed
 
 # ===========================================
-# LLM Integration
+# LLM Integration (Cloud APIs only)
 # ===========================================
-openai>=1.59.5,<2.0.0
-tiktoken>=0.8.0,<1.0.0
 google-generativeai>=0.8.3,<1.0.0
-langchain-google-genai>=2.0.0,<3.0.0
 
 # ===========================================
 # Utilities
 # ===========================================
 tqdm>=4.67.1,<5.0.0
-numpy>=2.0.0,<2.3.0  # Fix: numpy<2.3.0 for opencv compatibility
-protobuf>=5.0.0,<6.0.0  # Fix: protobuf 5.x for compatibility
-py-eureka-client>=0.13.2,<1.0.0
-urllib3>=1.26.0,<2.4.0  # Fix: urllib3<2.4.0 for kubernetes compatibility
-ddgs>=9.0.0,<10.0.0  # For web search fallback
+numpy>=2.0.0,<2.3.0
+protobuf>=5.0.0,<6.0.0
+py-eureka-client>=0.13.2,<1.0.0  # Optional: for service discovery
+urllib3>=1.26.0,<2.4.0
+ddgs>=9.0.0,<10.0.0  # For web search
 
 # ===========================================
 # API Framework
@@ -62,7 +55,7 @@ fastapi>=0.115.0,<1.0.0
 uvicorn>=0.34.0,<1.0.0
 
 # ===========================================
-# Database (PostgreSQL with SQLAlchemy)
+# Database (PostgreSQL/Supabase)
 # ===========================================
 sqlalchemy>=2.0.0,<3.0.0
 asyncpg>=0.29.0,<1.0.0
@@ -74,3 +67,18 @@ alembic>=1.13.0,<2.0.0
 # ===========================================
 pytest>=8.4.2,<9.0.0
 pytest-cov>=6.0.0,<7.0.0
+
+# ===========================================
+# REMOVED (not needed for cloud deployment):
+# ===========================================
+# - chromadb (using Qdrant Cloud instead)
+# - openai (using Gemini instead)
+# - tiktoken (OpenAI-specific)
+# - langchain-openai (using Gemini)
+# - pytesseract (OCR disabled, ~50MB)
+# - pdf2image (OCR disabled, ~20MB)
+# - opencv-python (OCR disabled, ~200MB package!)
+# - pdfplumber (not needed at runtime if vectorstore is pre-built)
+#
+# Total savings: ~300MB+ in dependencies
+# Image size: ~800MB vs ~2GB+ with full requirements
